--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -72,4 +72,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.71" />
 
+    <Button
+        android:id="@+id/home_bt_inputRegion"
+        android:layout_width="141dp"
+        android:layout_height="42dp"
+        android:text="지역 입력"
+        app:layout_constraintBottom_toTopOf="@+id/home_bt_recordView"
+        app:layout_constraintStart_toStartOf="@+id/home_bt_recordView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
