--- a/app/src/main/res/layout/fragment_localinput.xml
+++ b/app/src/main/res/layout/fragment_localinput.xml
@@ -33,27 +33,9 @@
         android:id="@+id/inputLocal_bt_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="60dp"
         android:text="확인"
-        app:layout_constraintStart_toEndOf="@+id/inputLocal_sp_dong"
-        app:layout_constraintTop_toBottomOf="@+id/inputLocal_sp_dong" />
-
-    <Spinner
-        android:id="@+id/inputLocal_sp_sigun"
-        android:layout_width="141dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="28dp"
-        app:layout_constraintStart_toStartOf="@+id/inputLocal_sp_sido"
-        app:layout_constraintTop_toBottomOf="@+id/inputLocal_sp_sido" />
-
-    <Spinner
-        android:id="@+id/inputLocal_sp_dong"
-        android:layout_width="141dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="28dp"
-        app:layout_constraintStart_toStartOf="@+id/inputLocal_sp_sigun"
-        app:layout_constraintTop_toBottomOf="@+id/inputLocal_sp_sigun" />
+        app:layout_constraintStart_toEndOf="@+id/inputLocal_sp_sido"
+        app:layout_constraintTop_toBottomOf="@+id/inputLocal_tv_title" />
 
     <TextView
         android:id="@+id/inputLocal_tv_siDo"
@@ -67,27 +49,11 @@
         app:layout_constraintTop_toBottomOf="@+id/inputLocal_tv_title" />
 
     <TextView
-        android:id="@+id/inputLocal_tv_dong"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="56dp"
-        android:text="동/읍/면"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/inputLocal_tv_title"
-        app:layout_constraintTop_toBottomOf="@+id/inputLocal_tv_siGun" />
-
-    <TextView
-        android:id="@+id/inputLocal_tv_siGun"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="72dp"
-        android:text="시/군"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/inputLocal_tv_title"
-        app:layout_constraintTop_toBottomOf="@+id/inputLocal_tv_siDo" />
+        android:id="@+id/localInput_tv_ReigonwaterTax"
+        android:layout_width="135dp"
+        android:layout_height="56dp"
+        android:text="0"
+        app:layout_constraintStart_toStartOf="@+id/inputLocal_sp_sido"
+        app:layout_constraintTop_toBottomOf="@+id/inputLocal_sp_sido" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
